Cambio con test incluidos